--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
     volumes:
       - bundle:/usr/local/bundle
       - '.:/app'
+    environment:
+      - S3_BUCKET=a-bucket
+      - S3_REGION=a_region
+      - S3_ACCESS_KEY_ID=an_access_key_id
+      - S3_SECRET_ACCESS_KEY=a_secret_access_key
     command:
       bash -c "bundle install --jobs 3 && bundle exec rake development:up"
 
