--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - S3_ACCESS_KEY_ID=an_access_key_id
       - S3_SECRET_ACCESS_KEY=a_secret_access_key
     command:
-      bash -c "bundle install --jobs 3 && bundle exec rake development:up"
+      bash -c "bundle exec rake development:up"
 
 volumes:
   bundle:
