--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 install:
-  - docker-compose build
-  - docker-compose up -d
+  - docker-compose -f docker-compose.ci.yml build
+  - docker-compose -f docker-compose.ci.yml up -d
   - sleep 5
 
 script:
-  - docker-compose exec app bundle exec rake test
+  - docker-compose -f docker-compose.ci.yml exec app bundle exec rake test
 
 after_script:
-  - docker-compose down
+  - docker-compose -f docker-compose.ci.yml down
