--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,5 @@ before_install:
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
-install:
-  - docker-compose -f docker-compose.ci.yml build
-  - docker-compose -f docker-compose.ci.yml up -d
-  - sleep 5
-
 script:
-  - docker-compose -f docker-compose.ci.yml exec app bundle exec rake test
-
-after_script:
-  - docker-compose -f docker-compose.ci.yml down
+  - ./scripts/cibuild
