--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -2,5 +2,22 @@ version: '2'
 services:
   app:
     build: .
+    environment:
+      - S3_BUCKET=a-bucket
+      - S3_REGION=a_region
+      - S3_ACCESS_KEY_ID=an_access_key_id
+      - S3_SECRET_ACCESS_KEY=a_secret_access_key
+      - S3_ENDPOINT=http://s3:9000
+    ports:
+      - 7000:80
     command:
       bash -c "bundle exec rake development:up"
+
+  s3:
+    image: minio/minio
+    environment:
+      MINIO_ACCESS_KEY: an_access_key_id
+      MINIO_SECRET_KEY: a_secret_access_key
+    ports:
+      - 9000:9000
+    command: server /tmp
