--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,10 +4,10 @@ services:
     extends:
       file: docker-compose.base.yml
       service: app
-    ports:
-      - 7000:80
-    environment:
-      - S3_BUCKET=a-bucket
-      - S3_REGION=a_region
-      - S3_ACCESS_KEY_ID=an_access_key_id
-      - S3_SECRET_ACCESS_KEY=a_secret_access_key
+    depends_on:
+      - s3
+
+  s3:
+    extends:
+      file: docker-compose.base.yml
+      service: s3
