--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -3,6 +3,7 @@ services:
   app:
     build: .
     environment:
+      - AUTH_TOKEN=123456789
       - S3_BUCKET=a-bucket
       - S3_REGION=a_region
       - S3_ACCESS_KEY_ID=an_access_key_id
