--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,17 @@ services:
       - '.:/app'
     depends_on:
       - s3
+      - redis
 
   s3:
     extends:
       file: docker-compose.base.yml
       service: s3
+
+  redis:
+    extends:
+      file: docker-compose.base.yml
+      service: redis
 
 volumes:
   bundle:
