--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -9,8 +9,7 @@ services:
       - S3_ACCESS_KEY_ID=an_access_key_id
       - S3_SECRET_ACCESS_KEY=a_secret_access_key
       - S3_ENDPOINT=http://s3:9000
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_URL=redis://redis:6379
       - REDIS_TIMEOUT=4
     ports:
       - 7000:80
